had to fix my services navigation and logo so I can do the stretch goal, the size of the logo was off

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,10 @@
 }
 
 
+.container{
+    padding-top: 2%;
+}
+
 body {
 	line-height: 1;
 }
@@ -25,6 +29,17 @@ header {
 .logo {
     width: 20%;
 }
+
+.servicesHeader .specialA {
+    width:25%;
+}
+
+
+.servicesHeader .specialA .logo{
+    width:100%;
+}
+
+
 
 h4{
 	font-size: 27px;
@@ -45,6 +60,8 @@ nav a{
     text-decoration: none;
     color: grey;
 }
+
+
 
 .cta{
 	display: flex;
